# dir2md

./: .gitignore  README.md  pyproject.toml  serve.bat
.github/: copilot-instructions.md
data/: metadata-schema.json
data/config/: settings-default.json  settings.json
data/examples/: raw_response.json  summary-assistant.md  summary-system.md  summary-user.md
data/prompts/: md_gen_summary_system_prompt.md  md_gen_summary_system_prompt_v2.md  md_mrg_bridge_score_system_prompt.txt  md_mrg_merge_summary_system_prompt.md  md_mrg_score_system_prompt.md
data/temp/: llm_test_assistant.md  llm_test_system.md  llm_test_user.md
design/: goal-2.1.0.md  initial.request.md
design/issues/: 1-save-json-metadata.plan.request.md  3-merge-muti-page-ocr.plan.request.md
docs/internals/: md_gen.md  md_mrg.md  webapp.md
issues/: 11-add-unit-test-to-rasterize.plan.request.md  15-doc.md  15-sub1-create-ocr-module.prompt.md  15-sub2-reate-ocr-module.prompt.md  5-only-llm-for-bridge-score-phase2.prompt.md  5-only-llm-for-bridge-score.plan.request.md  7-add-unit-test-md-gen-config.plan.prompt.md  9-add-unit-test-to-discovery.plan.prompt.md  language-model-test-frame-compact.plan.analysis.md  language-model-test-frame-compact.prompt.md  language-model-test-frame.plan.request.md  ocr-group-editable-tree.plan.analysis.md  update-config-module.plan.request.md  webapp-onboard-compact.plan.analysis.md  wire-merge-documents-sub1.plan.request.md
issues/archived/: 1-save-json-metadata.plan.analysis.md  11-add-unit-test-to-rasterize.plan.analysis.md  11-add-unit-test-to-rasterize.prompt.md  13-review-resizer-module.plan.analysis.md  (+42 more)
prompts/: md_gen_summary_system_prompt.txt
test/: test_cli.py  test_config.py  test_discovery.py  test_foundation.py  test_gateway.py  test_markdown_writer.py  test_metadata_writer.py  test_mrg_plan.py  test_rasterizer.py  test_resizer.py
(+99 files in other folders)
